# azure-rambi

./: .gitignore  AZURE_SALTED_BUTTER_SERVICE.md  MOVIE_POSTER_AGENT_SERVICE.md  README.md  VALIDATION_SCORES_FEATURE.md  apitest.py  azure.yaml  clean_apps.sh  dapr.yaml  import requests.py  requirements.txt  x.json
infra/: call_movies_api.sh  (+14 more)
src/: pyproject.toml  requirements.txt
src/apim/: ConfigureAPIs.bicep  ConfigureAPIs.json
src/apim/definition/: azure_open_ai.json  extract.py  movie_poster.json  tmdb_search_movie.json
src/apim/modules/: api.bicep  nv.bicep
src/apim/policies/: azure_open_ai.xml  movie_poster.xml  openai.xml  tmdb.xml
src/azurerambi/: Dockerfile  app.py  data.json  dump_logs.sh  gunicorn.conf.py  movie_poster.py  movie_poster_client.py  movie_poster_test.py  movie_service.py  movie_service_test.py  pyproject.toml  query_apim.py  redis_client.py  requirements.txt  runtime.txt
src/azurerambi/prompts/: structured_new_movie_short.txt
src/azurerambi/templates/: Dockerfile  base.html  env.html  fragment.html  generated_movie.html  index.html  main.html  movie.html  movieResult.html  poster.html  poster_description.html
src/generated_movie_svc/: Dockerfile  main.py  requirements.txt
src/gui_svc/: .dockerignore  Dockerfile  Procfile  app.py  entrypoint.sh  movie_poster_client.py  pyproject.toml  query_apim.py  requirements.txt  test_gallery_with_scores.py  test_movie_poster_validation.py
src/gui_svc/templates/: base.html  env.html  fragment.html  gallery.html  generated_movie.html  main.html  poster.html
src/movie_gallery_svc/: .dockerignore  Dockerfile  build_deploy.sh  cloudevent_sample.json  dump_logs.sh  entities.py  find_all.json  main.py  requirements.txt  run_remote_image.sh  sample.json  settings.py  store.py
src/movie_generate_svc/: Dockerfile  gunicorn.conf.py  main.py  requirements.txt
src/movie_generator_svc/: Dockerfile  main.py  main_test.py  redis_client.py  requirements.txt  test_llm.py
src/movie_generator_svc/prompts/: structured_new_movie_short.txt
src/movie_generator_svc/templates/: env.html
src/movie_poster/: cli_get.py  cli_post.py
src/movie_poster_agent_svc/: .dockerignore  .env.template  Dockerfile  README.md  agent.py  ai_tools.py  cli_curl.sh  client_example.py  deploy.sh  entities.py  local_run.py  main.py  pyproject.toml  requirements.txt  store.py  test_blob_access.py  test_main.py  test_validate_poster.py
src/movie_poster_svc/: .dockerignore  .gitignore  Dockerfile  cli_get.py  cli_post.py  client.py  gen_ai_movie_service.py  gunicorn.conf.py  main.py  main_test.py  movie-poster-image-container-app.yaml  requirements.txt  sa.py  spike.py  spike.sh  test_blob_upload.py  test_send_message.py
src/prompts/: new_movie.txt  structured_new_movie.txt
src/rambi_event_handler/: Dockerfile  build_deploy.sh  docker_build.sh  function_app.py  host.json  requirements.txt
(+45 files in other folders)
