[project]
name = "movie-poster-agent"
version = "0.1.0"
description = "AI Agent for validating movie poster images and descriptions"
authors = [
    {name = "Azure Rambi Team", email = "team@example.com"}
]
requires-python = ">= 3.11"
dependencies = [
    "agent-framework-azure-ai>=0.1.0a4",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "azure-identity>=1.15.0",
    "azure-storage-blob>=12.19.0",
    "azure-monitor-opentelemetry>=1.2.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "pydantic>=2.5.0",
    "pillow>=10.1.0",
    "aiofiles>=23.2.1",
    "httpx>=0.25.0",
    "jinja2>=3.1.2",
    "dapr>=1.12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]